Truncate td a's, fix kv columns

--- a/ui-v2/app/styles/components/table.scss
+++ b/ui-v2/app/styles/components/table.scss
@@ -39,7 +39,8 @@ td strong {
   padding: 1px 5px;
   border-radius: $radius;
 }
-td:not(.actions) {
+td:not(.actions),
+td:not(.actions) a {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
